--- a/webapps/test.html
+++ b/webapps/test.html
@@ -3,8 +3,14 @@
 <title>Network::Project</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <script type="text/javascript">
+	var id;
+	var check = "1234567890"
 	function initPage() {
 		registerEvents();
+		var d = new Date()
+		id = d.getTime();
+		var hiddenvalue = document.querySelector('input[type=hidden]');
+		hiddenvalue.value = id
 	}
 	
 	function registerEvents() {
@@ -16,7 +22,6 @@
 	
 	function writeComments(e) {
 		e.preventDefault();
-		console.log("here");
 		var eleForm = e.currentTarget.form;
 		var textbox = eleForm.querySelectorAll('input[type=text]');
 		var oFormData = new FormData(eleForm); //form data들을 자동으로 묶어준다.
@@ -28,10 +33,15 @@
 		request.onreadystatechange = function() {
 			if(request.readyState ==4 && request.status ==200) {
 				var obj = JSON.parse(request.responseText);
-				console.log(obj);
+				console.log(obj.content);
 				var element = document.querySelectorAll('#view ul');
-				var str_del = "<li>"+obj.content+"</li>";
-				element[0].insertAdjacentHTML("beforeend" , str_del );
+				for(var i in obj.content) {
+					if(obj.content[i] != check) {
+						var str_del = "<li>"+obj.content[i]+"</li>";
+						element[0].insertAdjacentHTML("beforeend" , str_del );
+					}
+				}
+				
 				//var eleCommentListli = eleCommentList.querySelectorAll('ul>li');
 				//eleCommentList.style.height = eleCommentListli.length * 19 + "px";
 				//eleCommentList.style.opacity = "1";
@@ -41,13 +51,38 @@
 		}
 		request.send(oFormData);
 	}
+	
+	function getChatData() {
+		console.log("here");
+		var oFormData = new FormData();
+		oFormData.append("content", check);
+		oFormData.append("id", id);
+		var url = "/reponse.json";
+		var request = new XMLHttpRequest();
+		request.open("POST" , url, true);
+		request.onreadystatechange = function() {
+			if(request.readyState ==4 && request.status ==200) {
+				var obj = JSON.parse(request.responseText);
+				console.log(obj.content);
+				var element = document.querySelectorAll('#view ul');
+				for(var i in obj.content) {
+					if(obj.content[i] != check) {
+						var str_del = "<li>"+obj.content[i]+"</li>";
+						element[0].insertAdjacentHTML("beforeend" , str_del );
+					}
+				}
+			}
+		}
+		request.send(oFormData);
+	}
+	setInterval("getChatData()", 1000);
 
 
 	window.onload = initPage;
 </script>
 </head> 
 <body>
-	<h1>Image 1</h1>
+	<h1>Free Local Chat</h1>
 	<img src="http://pds23.egloos.com/logo/201208/13/28/e0127128.jpg">
 	<div id ="view">
 	<ul></ul>
@@ -55,6 +90,7 @@
 	<div id="comment">
 	<form action="/" method="POST" enctype="multipart/form-data">
 		<input type="text" id="content" name="content" placeholder="채팅입력하세요">
+		<input type="hidden" name="id" value="">
 		<input type="submit" value="입력"><br>
 	</form>
 </body>
